add multiple-response feature; add subscribe in demo
