# examples/greeter/restapi/operations/subscribe_responses.go
@@ -1,0 +1,61 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/elakito/swagsock/examples/greeter/models"
+)
+
+// SubscribeOKCode is the HTTP code returned for type SubscribeOK
+const SubscribeOKCode int = 200
+
+/*SubscribeOK Returns a subscription information
+
+swagger:response subscribeOK
+*/
+type SubscribeOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.GreetingReply `json:"body,omitempty"`
+}
+
+// NewSubscribeOK creates SubscribeOK with default headers values
+func NewSubscribeOK() *SubscribeOK {
+
+	return &SubscribeOK{}
+}
+
+// WithPayload adds the payload to the subscribe o k response
+func (o *SubscribeOK) WithPayload(payload []*models.GreetingReply) *SubscribeOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the subscribe o k response
+func (o *SubscribeOK) SetPayload(payload []*models.GreetingReply) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SubscribeOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.GreetingReply, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
