# examples/greeter/restapi/operations/unsubscribe_responses.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/elakito/swagsock/examples/greeter/models"
+)
+
+// UnsubscribeOKCode is the HTTP code returned for type UnsubscribeOK
+const UnsubscribeOKCode int = 200
+
+/*UnsubscribeOK Returns the subscription summary
+
+swagger:response unsubscribeOK
+*/
+type UnsubscribeOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.GreetingSummary `json:"body,omitempty"`
+}
+
+// NewUnsubscribeOK creates UnsubscribeOK with default headers values
+func NewUnsubscribeOK() *UnsubscribeOK {
+
+	return &UnsubscribeOK{}
+}
+
+// WithPayload adds the payload to the unsubscribe o k response
+func (o *UnsubscribeOK) WithPayload(payload *models.GreetingSummary) *UnsubscribeOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the unsubscribe o k response
+func (o *UnsubscribeOK) SetPayload(payload *models.GreetingSummary) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UnsubscribeOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
